--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,13 @@ android {
         applicationId "com.toxin.gotox"
         minSdkVersion 14
         targetSdkVersion 24
+        jackOptions {
+            enabled true
+        }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
@@ -85,8 +92,8 @@ eclipse {
     }
 
     jdt {
-        sourceCompatibility = 1.6
-        targetCompatibility = 1.6
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 
     classpath {
